Fixed gap

--- a/flexbox-exercises/03-flex-header-2/style.css
+++ b/flexbox-exercises/03-flex-header-2/style.css
@@ -61,5 +61,5 @@ ul {
 .left-side, .right-side {
     display: flex;
     align-items: center;
-    gap: 16px;
+    gap: 15px;
 }
